# air_passangers_bot

./: .dockerignore  .gitignore  fly.toml  main.py  main_old.py  next.config.js  output.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py  vercel.json
.github/workflows/: deploy-prebuild.yaml  deploy-production.yaml
api/: index.py
app/: globals.css  layout.tsx  page.tsx
app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  SourceBubble.tsx
nextjs/api/: index.py
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/app/components/: ChatWindow.tsx  EmptyState.tsx
src/: chains.py  chat_types.py  constants.py  routs.py  utils.py
